@@ -1,5 +1,5 @@
 /* compat.h: various compatibility bits
-   Copyright (c) 2003-2008 Philip Kendall
+   Copyright (c) 2003-2012 Philip Kendall
 
    $Id$
 
@@ -75,10 +75,30 @@ int mkstemp( char *templ );
 #define PATH_MAX 1024
 #endif
 
+/* The types of auxiliary file we can look for */
+typedef enum utils_aux_type {
+
+  UTILS_AUXILIARY_LIB,		/* Something from the lib/ directory */
+  UTILS_AUXILIARY_ROM,		/* Something from the roms/ directory */
+  UTILS_AUXILIARY_WIDGET,	/* Something from the widget/ directory */
+  UTILS_AUXILIARY_GTK,		/* Something from the gtk/ directory */
+
+} utils_aux_type;
+
+typedef struct path_context {
+
+  int state;
+
+  utils_aux_type type;
+  char path[ PATH_MAX ];
+
+} path_context;
+
 int compat_osname( char *buffer, size_t length );
 const char* compat_get_temp_path( void );
 const char* compat_get_home_path( void );
 int compat_is_absolute_path( const char *path );
+int compat_get_next_path( path_context *ctx );
 
 typedef FILE* compat_fd;
 
