@@ -1,5 +1,5 @@
 /* paths.c: Path-related compatibility routines
-   Copyright (c) 1999-2007 Philip Kendall
+   Copyright (c) 1999-2012 Philip Kendall
 
    $Id$
 
@@ -25,9 +25,15 @@
 
 #include <config.h>
 
+#ifdef HAVE_LIBGEN_H
+#include <libgen.h>
+#endif				/* #ifdef HAVE_LIBGEN_H */
 #include <stdlib.h>
+#include <windows.h>
 
 #include "compat.h"
+#include "fuse.h"
+#include "ui/ui.h"
 
 const char*
 compat_get_temp_path( void )
@@ -57,4 +63,60 @@ compat_is_absolute_path( const char *path )
   if( path[0] == '\\' ) return 1;
   if( path[0] && path[1] == ':' ) return 1;
   return 0;
+}
+
+int
+compat_get_next_path( path_context *ctx )
+{
+  char buffer[ PATH_MAX ];
+  const char *path_segment, *path2;
+
+  switch( ctx->type ) {
+  case UTILS_AUXILIARY_LIB: path_segment = "lib"; break;
+  case UTILS_AUXILIARY_ROM: path_segment = "roms"; break;
+  case UTILS_AUXILIARY_WIDGET: path_segment = "ui/widget"; break;
+  case UTILS_AUXILIARY_GTK: path_segment = "ui/gtk"; break;
+  default:
+    ui_error( UI_ERROR_ERROR, "unknown auxiliary file type %d", ctx->type );
+    return 0;
+  }
+
+  switch( (ctx->state)++ ) {
+
+    /* First look relative to the Fuse executable */
+  case 0:
+    if( compat_is_absolute_path( fuse_progname ) ) {
+      strncpy( buffer, fuse_progname, PATH_MAX );
+      buffer[ PATH_MAX - 1 ] = '\0';
+    } else {
+      DWORD retval; 
+      retval = GetModuleFileName( NULL, buffer, PATH_MAX );
+      if( !retval ) return 0;
+    }
+
+    path2 = dirname( buffer );
+    snprintf( ctx->path, PATH_MAX, "%s" FUSE_DIR_SEP_STR "%s", path2,
+              path_segment );
+    return 1;
+
+    /* Then relative to %APPDATA%/Fuse directory */
+  case 1:
+    path2 = getenv( "APPDATA" );
+    if( !path2 ) return 0;
+    snprintf( ctx->path, PATH_MAX, "%s" FUSE_DIR_SEP_STR "Fuse" 
+              FUSE_DIR_SEP_STR "%s", path2, path_segment );
+
+    return 1;
+
+    /* Then relative to the current directory */
+  case 2:
+    snprintf( ctx->path, PATH_MAX, "." FUSE_DIR_SEP_STR "%s",
+              path_segment );
+    return 1;
+
+  case 3: return 0;
+  }
+
+  ui_error( UI_ERROR_ERROR, "unknown path_context state %d", ctx->state );
+  fuse_abort();
 }
